Moved almost every hashmap to MemoryStorage class and fixed some inventory bugs.